# ai-master-challenge

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  PROJECT-EVIDENCE.md  README.md  REVERT_COMMIT.md  analise-das-prs.html  churn_challenge.ipynb  compass.yml  dev.sh  docker-compose.dev.yml  master_table.sql  model tree.sql  model_temporal.sql  modelo_tree_feature.sql  package-lock.json  package.json  submission-guide.md
docs/: index.html
submissions/EDUARDO-RABELO-DE-MORAES-FONTES/solution/: CHALLENGE.MD  Dockerfile  docker-compose.yml  pyproject.toml
submissions/EDUARDO-RABELO-DE-MORAES-FONTES/solution/data/: sales.sqlite3
submissions/EDUARDO-RABELO-DE-MORAES-FONTES/solution/frontend/: app.py
submissions/EDUARDO-RABELO-DE-MORAES-FONTES/solution/g4sales/: __init__.py  api.py  dev_runner.py  schemas.py
submissions/EDUARDO-RABELO-DE-MORAES-FONTES/solution/g4sales/db/: __init__.py  db_init.py
submissions/joao-paulo/solution/: .gitignore  README.md  main.py  pyproject.toml
submissions/joao-paulo/solution/output/: account_360.csv  account_model_explanations.csv  churn_classifier.joblib  churn_reconciliation.csv  churn_risk_drivers.csv  current_churn_scoring.csv  customer_health_score.csv  dashboard_ceo_premium_ravenstack.html  feature_importance_top25.csv  model_comparison.csv  model_global_explainability.csv  model_metrics.json  point_in_time_training_dataset.csv
submissions/joao-paulo/solution/src/churn_diagnosis/: __init__.py
submissions/joao-paulo/solution/tests/: test_account_360.py  test_health_service.py  test_ml_pipeline.py  test_premium_dashboard.py  test_specifications.py
submissions/leopoldo-lima/solution/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-audit.txt
submissions/leopoldo-lima/solution/.github/: PULL_REQUEST_TEMPLATE.md
submissions/leopoldo-lima/solution/config/: normalization-map.json  scoring-rules.json
submissions/leopoldo-lima/solution/contracts/: repository-data-contract.json
submissions/leopoldo-lima/solution/data/: demo-opportunities.json
submissions/leopoldo-lima/solution/public/: app.js  index.html  styles.css
submissions/leopoldo-lima/solution/scripts/: capture_cbx08_screenshots.py  export_real_flow_evidence.py  generate_data_dictionary.py  inspect_data.py  record_demo_chromium.py  run_data_runbook.py  tasks.py  validate_data_contract.py  validate_data_quality.py  validate_referential_integrity.py  validate_ui_quality.py
submissions/leopoldo-lima/solution/tests/: conftest.py  test_api_client.py  test_api_client_contract_http.py  test_api_contract.py  test_api_opportunity_repository.py  test_data_dictionary.py  test_data_quality.py  test_deal_stage.py  test_domain_models.py  test_features.py  test_http_mappers.py  test_normalization.py  test_real_dataset_main_flow.py  test_real_dataset_serving.py  test_referential_integrity.py  test_repository_factory.py  test_scoring_engine.py  test_scoring_v2_features.py  test_serving_pipeline_integration.py  test_ui_competition_pack.py  test_ui_front_coverage.py  test_ui_smoke.py  test_view_models.py
(+2484 files in other folders)
