[project]
name = "g4sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "pandas>=2.3.2",
    "pytask>=0.5.0",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "jupyterlab>=4.0.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.14.11",
    "taskipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["g4sales"]

# --- Ruff Configuration (Linter & Formatter) ---
[tool.ruff]
exclude = ["migrations", "*/migrations/*", "__pycache__", "*.egg-info"]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "I", "B", "W"]
ignore = ["F403"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
filterwarnings = []
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[project.scripts]
dev = "g4sales.cli:main"

# --- Dev Tasks (Taskipy) ---
[tool.taskipy.tasks]
db_init = "python g4sales/db/db_init.py"
api = "uvicorn g4sales.api:app --host 0.0.0.0 --port 8000 --reload"
front = "streamlit run frontend/app.py --server.headless true"
up = "python -m g4sales.dev_runner"
pytask = "pytask"
lin = "ruff format . && ruff check --fix --unsafe-fixes ."
lint = "ruff format . && ruff check --fix ."
check = "ruff format --check . && ruff check ."
validate = "ruff format . && ruff check --fix . && pytest -v"
test = "pytest -v"
testv = "pytest -v -s"
deps = "uv tree"
outdated = "uv pip list --outdated"
security = "uvx pip-audit"
